# Q-Spectrum

./: .dockerignore  .editorconfig  .env.template  .gitattributes  .gitignore  ACTION-PROTOCOL.md  AGENTS.md  BOOT.md  CHANGELOG.md  Dockerfile  FINDINGS-REGISTRY.md  FIXES-APPLIED.md  INDEX.md  INSTALL-GUIDE.md  KNOWLEDGE-INDEX.md  LAUNCH.html  LICENSE  MEMORY.md  QUICK-START.md  README.md  ROLE-REGISTRY.md  SCENARIOS.md  SKILLS-INDEX.md  SUPER-BRAIN-ARCHITECTURE.md  SYSTEM-PROMPT.md  USE-CASES.md  USER-GUIDE.md  api_server.py  backup-user-data.bat  backup-user-data.sh  brain_config.example.py  brain_config.py  chat.html  clean-for-delivery.bat  clean-for-delivery.sh  closed_loop.py  closed_loop_core.py  contact_channel.py  dashboard.html  decision_layer.py  (+43 more)
.githooks/: check_doc_numbers.py  pre_commit.py
AI项目管理/: AGENTS.md  README.md  START-HERE.md  新项目创建工具.ps1  跨会话交接指南.md  跨会话交接系统提示词.md
brain_core/: __init__.py  brain.py  capabilities.py  config.py  graph.py  hybrid_router.py  knowledge_crystallizer.py  knowledge_orchestrator.py  mcp_bridge.py  mcp_router.py  peer_collaboration.py  skill_orchestrator.py
config/: default.yaml
scripts/: security-check.py
tests/: adversarial_audit.py  conftest.py  flywheel_audit.py  fmea_audit.py  generational_chain.py  industry_scenario_wargame.py  journey_wargame.py  longitudinal_drift.py  meta_audit.py  persona_stressor_matrix.py  reverse_thinking_probes.py  self_report_accuracy.py  semantic_consistency.py  test_ai_model.py  test_api_server.py  test_core_modules.py  test_developer.py  test_dual_loop.py  test_e2e_core_pipeline.py  (+8 more)
(+243 files in other folders)
